# sunkit-pyvista

./: .coveragerc  .cruft.json  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .rtd-environment.yml  .ruff.toml  CHANGELOG.rst  MANIFEST.in  README.rst  _typos.toml  azure-pipelines.yml  conftest.py  pyproject.toml  pytest.ini  ruff.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: build_docs.yml  ci.yml  python-test-workflow.yml  setup_headless_display.sh  sub_package_update.yml  tests.yml
changelog/: 10.feature.rst  116.breaking.rst  117.breaking.rst  117.trivial.rst  118.trivial.rst  12.feature.rst  137.doc.rst  138.breaking.rst  143.feature.rst  150.trivial.rst  157.breaking.1.rst  157.breaking.rst  16.feature.rst  165.breaking.rst  17.feature.rst  18.feature.rst  195.feature.rst  219.breaking.rst  23.trivial.rst  24.feature.rst  25.doc.rst  26.feature.rst  29.feature.rst  30.trivial.rst  32.feature.rst  34.bugfix.rst  37.feature.rst  38.feature.rst  4.feature.rst  52.trivial.rst  55.bugfix.rst  57.feature.rst  59.feature.rst  6.feature.rst  69.trivial.rst  70.feature.rst  72.trivial.rst  73.trivial.rst  79.trivial.rst  84.feature.rst
docs/: api.rst  conf.py  generate_images.py  getting_started.rst  index.rst  installing.rst  nitpick-exceptions.txt
docs/examples/: 3d_functionality.rst  3d_map.rst  _readme.txt  assume_shperical.rst  assume_spherical.rst  field_lines.rst  index.rst  setup.py  test.rst
docs/whatsnew/: index.rst
examples/: 3d_functionality.py  3d_map.py  README.txt  assume_spherical.py  current_sheet.py  ex1_plot_map.py  field_lines.py  field_lines_cartesian_box.py  field_lines_current_sheets.py  floating_sphere.py  plot_functionality.py  plot_map.py  plot_map_in_3d.py  skip_plot_brighest_pixel.py  skip_plot_field_lines.py  skip_plot_functionality.py  skip_plot_map_in_3d.py  skip_rotating_maps.py
licenses/: LICENSE.rst
sunkit_pyvista/: __init__.py  background_plotter.py  conftest.py  draw.py  magex.py  mapsequence_animator.py  pfsspy.py  plotter.py  sample.py  utils.py  version.py
sunkit_pyvista/tests/: conftest.py  figure_hashes_pyvista_dev_astropy_dev_sunpy_dev.json  helpers.py  test_magex.py  test_plotting.py  test_pyvista.py
