[metadata]
name = sunkit_pyvista
author =
author_email =
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/sunpy/sunkit-pyvista
description = 3D visualisation of solar physics data with pyvista
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =


[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main


[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    sunpy-sphinx-theme

[options.package_data]
sunkit_pyvista = data/*

[tool:pytest]
testpaths = "sunkit_pyvista" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  sunkit_pyvista/__init*
  sunkit_pyvista/conftest.py
  sunkit_pyvista/*setup_package*
  sunkit_pyvista/tests/*
  sunkit_pyvista/*/tests/*
  sunkit_pyvista/extern/*
  sunkit_pyvista/version*
  */sunkit_pyvista/__init*
  */sunkit_pyvista/conftest.py
  */sunkit_pyvista/*setup_package*
  */sunkit_pyvista/tests/*
  */sunkit_pyvista/*/tests/*
  */sunkit_pyvista/extern/*
  */sunkit_pyvista/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
