[metadata]
name = sunkit_pyvista
provides = sunkit_pyvista
description = 3D visualisation of solar physics data with pyvista
long_description = file: README.rst
long_description_content_type = text/x-rst
author = The SunPy Community
author_email = sunpy@googlegroups.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/sunpy/sunkit-pyvista
edit_on_github = True
github_project = sunpy/sunkit-pyvista
platform = any
keywords = solar physics, solar, science, sun, 3d, plotting, visualisation
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Visualization

[options]
python_requires = >=3.7
zip_safe = False
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  pfsspy>=0.6.6
  pyvista>=0.31.3
  sunpy[map]>=3.0.0

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-doctestplus
docs =
    sphinx
    sphinx-automodapi
    sphinx-automodapi
    sphinx-changelog
    sphinx-gallery
    sunpy-sphinx-theme

[options.package_data]
sunkit_pyvista = data/*

[tool:pytest]
testpaths = "sunkit_pyvista" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
text_file_format = rst
addopts = --doctest-rst
markers =
    display_server: marks this test function as needing a display server.

[pycodestyle]
max_line_length = 110

[flake8]
max-line-length = 110
exclude =
    .git,
    __pycache__,
    docs/conf.py,
    build,
    sunkit_pyvista/__init__.py,
rst-directives =
    plot

[isort]
balanced_wrapping = True
skip=docs/conf.py,sunkit_pyvista/__init__.py
default_section = THIRDPARTY
include_trailing_comma = True
known_sunpy = astropy, sunpy
known_first_party = sunkit_pyvista
length_sort = False
length_sort_sections=stdlib
line_length = 110
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, SUNPY, FIRSTPARTY, LOCALFOLDER

[coverage:run]
omit =
  sunkit_pyvista/__init*
  sunkit_pyvista/conftest.py
  sunkit_pyvista/*setup_package*
  sunkit_pyvista/tests/*
  sunkit_pyvista/*/tests/*
  sunkit_pyvista/extern/*
  sunkit_pyvista/version*
  */sunkit_pyvista/__init*
  */sunkit_pyvista/conftest.py
  */sunkit_pyvista/*setup_package*
  */sunkit_pyvista/tests/*
  */sunkit_pyvista/*/tests/*
  */sunkit_pyvista/extern/*
  */sunkit_pyvista/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
